Refactored FileSystemAccessPenguin.java